syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.commerce.platform.grpc.proto";
option java_outer_classname = "PaymentServiceProto";

package payment;

service PaymentService {
  rpc ApprovePayment (PaymentApprovalRequest) returns (PaymentApprovalResponse);
  rpc CancelPayment (PaymentCancelRequest) returns (PaymentCancelResponse);
  rpc PartialCancelPayment (PaymentPartialCancelRequest) returns (PaymentPartialCancelResponse);
  rpc ApproveWithCard (CardPaymentRequest) returns (PaymentApprovalResponse);
}

message PaymentApprovalRequest {
  string order_id = 1;
  int32 installment = 2;
  string pay_method = 3;
  string pay_provider = 4;
}

message PaymentApprovalResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  PaymentData data = 4;
}

message PaymentData {
  string payment_id = 1;
  int64 approved_amount = 2;
  string approved_at = 3;
  string pay_method = 4;
  string status = 5;
}

message PaymentCancelRequest {
  string order_id = 1;
}

message PaymentCancelResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  CancelData data = 4;
}

message CancelData {
  string payment_id = 1;
  int64 canceled_amount = 2;
  string canceled_at = 3;
}

message PaymentPartialCancelRequest {
  string order_id = 1;
  int64 order_item_id = 2;
  int64 canceled_quantity = 3;
}

message PaymentPartialCancelResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  PartialCancelData data = 4;
}

message PartialCancelData {
  int64 partial_cancel_id = 1;
  int64 canceled_amount = 2;
  int64 remain_amount = 3;
  string canceled_at = 4;
}

message CardPaymentRequest {
  int64 card_id = 1;
  string order_id = 2;
}
